--- a/restapi/pages/register.html
+++ b/restapi/pages/register.html
@@ -5,6 +5,7 @@
 <!------ Include the above in your HEAD tag ---------->
 
 <body>
+    <form action="/register" method="post">
     <div id="login">
         <h3 class="text-center text-white pt-5">Register form</h3>
         <div class="container">
@@ -38,5 +39,6 @@
             </div>
         </div>
     </div>
+    </form>
 </body>
 </html>
